--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,20 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  macos-checks:
+
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Clippy
+        run: cargo clippy --tests --all-features -- -D warnings
+      - name: Format
+        run: cargo fmt
+      - name: Run tests
+        run: cargo test --verbose
+
+  linux-checks:
 
     runs-on: ubuntu-latest
 
