--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
+inotify = { version = "0.9", default-features = false }
+
+[target.'cfg(target_os="macos")'.dependencies]
 fsevent = "2.1.2"
 
 [dev-dependencies]
